[package]
name = "ash_shader_creator"
version = "1.2.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for easy to way automatically create multiple shader stages from the directory path."
authors = ["Jerrody <huntermlg123465@gmail.com>"]
repository = "https://github.com/Jerrody/ash_shader_creator"

[dependencies]
ash = "0.33.0+1.2.186"